# Raytracer

./: README.md  TODO
include/: camera.h  color.h  const.h  light.h  raytracer.h  sphere.h  surface.h  triangle.h  utils.h  vector3.h
src/: camera.cpp  color.cpp  light.cpp  raytracer.cpp  sphere.cpp  triangle.cpp  vector3.cpp
tests/: CMakeLists.txt  sfml.cpp  test_camera.cpp  test_raytracer.cpp  test_vector3.cpp
